--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -37,6 +37,6 @@ jobs:
       uses: actions/upload-release-asset@v1.0.2
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: .bundle/bundle.tar.gz
+        asset_path: ./bundle/bundle.tar.gz
         asset_name: bundle.tar.gz
         asset_content_type: application/zip
