--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -25,8 +25,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ git_hash }}
+        release_name: Release ${{ git_hash }}
         body: |
           Changes in this Release
           - Latest Bundle
