--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -26,7 +26,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
         tag_name: ${{ git_hash }}
-        release_name: Release ${{ git_hash }}
+        release_name: Release ${{ GITHUB_SHA }}
         body: |
           Changes in this Release
           - Latest Bundle
