--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -25,7 +25,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ git_hash }}
+        tag_name: ${{ GITHUB_SHA }}
         release_name: Release ${{ GITHUB_SHA }}
         body: |
           Changes in this Release
